management icon is visible when scrolling down fix

--- a/client/components/OverviewPage/SmileyTable.scss
+++ b/client/components/OverviewPage/SmileyTable.scss
@@ -28,4 +28,5 @@ $QUESTION_COUNT: 19;
   background-color: white;
   box-shadow: 0px 0px 2px 2px white; //little white shadow to cover the shadow of the .square
   padding-top: 10px;
+  z-index: 4;
 }
